# Devops

./: .gitignore  README.md  requirements.txt
.github/workflows/: test_python.yml
source/: conf.py
source/ansible/: architecture.rst  installation.rst
source/containers/: helloworld.rst  installation.rst  introduction.rst  orchestration.rst  workingwithdocker.rst
source/curriculum/: curriculum.rst
source/diagrams/: .$ansible.drawio.bkp  linux.drawio  sdlc.drawio
source/docs_as_code/: TODO.rst  introduction.rst  sphinx.rst
source/environments/: getting_around.rst
source/git/: bestpractices.rst
source/introduction/: devops.rst
source/kubernetes/: deployments.rst  gettingstarted.rst  introduction.rst
source/linux/: 3_managing_software.rst  4_service_management.rst  7_linux_file_systems.rst  8_terminal_tuning.rst  TODO.rst
source/pipelines/: introduction.rst  jenkins.rst
source/python/: TODO.rst  data_structures.rst  documentation.rst  installation.rst  introduction.rst  libraries.rst  rules.rst
source/scripting/: TODO.rst  shell_style_guide.rst
source_code/ansible/: inventory
source_code/containers/deploy_webserver/: Dockerfile  index.html
source_code/containers/docker_tree/: Dockerfile
source_code/pipelines/: pyproject.toml  requirements.txt  setup.py  test_cli.py
source_code/pipelines/cli/: random_string_cli.py
source_code/python/: 1_strings.py  2_numbers.py  3_lists.py  4_dictionaries.py  5_conditional.py  6_forloop.py  7_whileloop.py  8_functions.py  9_classes.py  requirements.txt  test_requirements.txt
(+5 files in other folders)
